# website

./: .gitignore  README.md  app.py  build.py  pyproject.toml  vercel.json
api/: index.py
components/: blog.py  layout.py  projects.py  viz.py
content/blog/: 2026-01-02-building-python-native-website.md  2026-01-15-cfr-algorithms-in-practice.md  2026-02-10-kalshi-prediction-markets.md
content/projects/: baseball-predictions.yaml  kalshi-analysis.yaml  lcht.yaml  monce-tracking.yaml
static/css/: style.css
visualizations/: kalshi_treemap.py
